variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: not found: value couleur
couleur = Color.orange
^RunHalf:9: error: not found: value couleur
  if (couleur = getGroundColor()){
      ^